<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:orderInCategory="1"
        android:title="@string/ic_action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="2"
        android:title="@string/ic_action_clear"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        android:title="@string/ic_action_delete"
        app:showAsAction="ifRoom"/>

</menu>