<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/image_size"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_pet_gender"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/pet_gender_image"
        android:padding="@dimen/text_margin"
        tools:src="@drawable/gender_male"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/material_margin"
        android:paddingRight="@dimen/material_margin">

        <TextView
            android:id="@+id/text_pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_big"
            tools:targetApi="jelly_bean"
            tools:text="Bilbo"/>

        <TextView
            android:id="@+id/text_pet_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_medium"
            tools:targetApi="jelly_bean"
            tools:text="Pug"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/list_item_text_age"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/text_size_small"
            tools:targetApi="jelly_bean"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/list_item_text_weight"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/text_size_small"
            tools:targetApi="jelly_bean"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingEnd="@dimen/text_margin"
        android:paddingStart="@dimen/text_margin">

        <TextView
            android:id="@+id/text_pet_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_small"
            tools:targetApi="jelly_bean"
            tools:text="8"/>

        <TextView
            android:id="@+id/text_pet_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_small"
            tools:targetApi="jelly_bean"
            tools:text="15"/>

    </LinearLayout>

</LinearLayout>